<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>

    <string name="profile_page_links_title">Name</string>
    <string name="profile_page_links_postalAddress">Saint-Pierre-du-Mont à 5km</string>
    <string name="profile_page_links_phoneNumber">+33 6 86 57 90 14</string>
    <string name="profile_page_links_socialWebsite">www.facebook.fr/name</string>
    <string name="profile_page_description_title">A propos de moi</string>
    <string name="profile_page_description_content">Description content</string>

    <string name="profile_page_button_addToFav_description">Tag this person as favorite</string>
    <string name="profile_page_button_backToList_description">Back to the neighbors list</string>
    <string name="profile_page_avatar_banner_description">Profile picture of this person</string>
    <string name="profile_page_title_banner_description">Name of this person</string>

    <!-- Nymrok Debug Custom Texts -->
    <string name="Tab1">#1</string>
    <string name="Tab2">#2</string>
    <string name="Tab3">#3</string>
    <string name="TabText1">First fragment</string>
    <string name="TabText2">Second fragment</string>
    <string name="TabText3">Third fragment</string>
</resources>