...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp" >

        <ImageButton
            android:id="@+id/profile_page_button_backToList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:background="#00FFFFFF"
            android:clickable="true"
...

        <TextView
            android:id="@+id/profile_page_title_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/profile_page_button_backToList"
            app:layout_constraintBottom_toTopOf="@+id/profile_page_button_addToFav"
            android:text="@string/profile_page_links_title"
            android:contentDescription="@string/profile_page_title_banner_description"
            style="@style/profile_page_banner_title" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/profile_page_button_addToFav"
...
