<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/fragment_favorites_recyclerview"
    android:name="com.nymrok.entrevoisins.ui.fragments.FavoritesFragment"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"

    app:layoutManager="LinearLayoutManager"
    tools:context=".ui.fragments.FavoritesFragment"
    tools:listitem="@layout/fragment_favorites" />